--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -19,9 +18,10 @@
 
         <LinearLayout
             android:id="@+id/book_item_rightLayout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
+            android:layout_toLeftOf="@+id/select_album_cb"
             android:layout_toRightOf="@+id/album_image_url"
             android:orientation="vertical">
 
@@ -52,6 +52,15 @@
 
 
         </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/select_album_cb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:gravity="center" />
 
     </RelativeLayout>
 
